# poweroff-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py
src/clients/common/: base_client.py
src/clients/poweroff/: client.py  models.py
