[tool.poetry]
name = "Power off bot"
version = "0.1.0"
description = ""
authors = ["Taras Sheketa <taras.sheketa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.2"
httpx = "^0.27.0"
requests = "^2.32.3"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
